Fix layout issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,13 +1,1 @@
 @tailwind base;
-
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#content-container {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-}
